--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -324,7 +324,7 @@
 
   <footer>
     <nav class="nav2">
-      <ul class="menu-item2">
+      <ul class="menu-items">
         <li class="menu-item"><a href="../htmls/purple.html">purple</a></li>
         <li class="menu-item"><a href="../htmls/blue.html">blue</a></li>
         <li class="menu-item"><a href="../htmls/red.html">red</a></li>
