--- a/htmls/white.html
+++ b/htmls/white.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/w/01.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/13.jpeg" 　alt=""   class="photo"/> 
