--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -215,6 +215,15 @@
           <img src="../photos/p/25.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/26.jpeg" 　alt=""   class="photo"/>  -->
         </a>
+        <a href="../htmls/purple3.html">
+          <img src="../photos/p/31.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/32.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/33.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/34.jpeg" 　alt=""   class="photo"/> 
+          <!-- <img src="../photos/p/24.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/25.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/26.jpeg" 　alt=""   class="photo"/>  -->
+        </a>
         <a href="../htmls/green.html">
           <img src="../photos/g/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/12.jpeg" 　alt=""   class="photo"/> 
@@ -239,17 +248,6 @@
           <img src="../photos/g/35.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/36.jpeg" 　alt=""   class="photo"/>  -->
         </a>
-
-
-        <a href="../htmls/brawn2.html">
-          <img src="../photos/br/21.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/22.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/23.jpeg" 　alt=""   class="photo"/> 
-          <!-- <img src="../photos/br/24.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/25.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/br/26.jpeg" 　alt=""   class="photo"/>  -->
-        </a>
-     
       </div>
 
 
@@ -302,6 +300,14 @@
           <img src="../photos/b/65.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/66.jpeg" 　alt=""   class="photo"/>  -->
         </a> 
+        <a href="../htmls/brawn2.html">
+          <img src="../photos/br/21.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/22.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/23.jpeg" 　alt=""   class="photo"/> 
+          <!-- <img src="../photos/br/24.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/25.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/br/26.jpeg" 　alt=""   class="photo"/>  -->
+        </a>
 
       </div>
 
@@ -324,7 +330,7 @@
 
   <footer>
     <nav class="nav2">
-      <ul class="menu-items">
+      <ul class="menu-item2">
         <li class="menu-item"><a href="../htmls/purple.html">purple</a></li>
         <li class="menu-item"><a href="../htmls/blue.html">blue</a></li>
         <li class="menu-item"><a href="../htmls/red.html">red</a></li>
