--- a/htmls/black2.html
+++ b/htmls/black2.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/bl/20.jpeg" 　alt=""   class="photo"/>
           <img src="../photos/bl/21.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/22.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/23.jpeg" 　alt=""   class="photo"/> 
@@ -45,8 +46,19 @@
           <img src="../photos/bl/27.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/28.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/29.jpeg" 　alt=""   class="photo"/> 
-      
 
+          <p>
+            Copper wire & Hat →Hat <br>
+            Slacks & Work pants→Pants <br>
+            Corduroy shirt ×2 →Shirt Dress<br>
+            Corduroy shirt & Jacket ＋袴→Jacket<br>
+          </p>
+          <p>
+            コンセプトはサイバーパンクのディストピアで路頭に迷った人造人間です。
+            衣装のポイントはレイヤードとインサイドアウト。そして切りっぱなしというかもはや壊しっぱなしの末端処理。
+            メイクは女性ぽいメイクを濃いめにして人造人間感とジェンダーレス感を出しました。
+            観て欲しいのはインナーのレイヤード、ジャケットのインサイドアウト部分、歩いた時の布の残りや揺れです。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
