--- a/htmls/blue.html
+++ b/htmls/blue.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/b/10.jpeg" 　alt=""   class="photo"/>
           <img src="../photos/b/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/13.jpeg" 　alt=""   class="photo"/> 
@@ -46,7 +47,15 @@
           <img src="../photos/b/18.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/19.jpeg" 　alt=""   class="photo"/> 
       
-
+          <p>
+            Denim pants→Boots / Earrings<br>
+            T-shirt → One Piece<br>
+          </p>
+          <p>
+            古着＝デニムというイメージだったので、デニムをメインに考えました。
+            それをあえてブーツとイヤリングという小物に取り入れたのがポイントです。
+            フェミニンなワンピース×クールなヒールブーツという正反対なものの組み合わせが、シンプルだけどモード系というテーマを表現しています。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
