--- a/htmls/blue2.html
+++ b/htmls/blue2.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/b/20.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/21.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/22.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/23.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,16 @@
           <img src="../photos/b/28.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/29.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Denim pants & chino pants & →Various types of pants → Fluttering skirt<br>
+            judo clothes→Jacket <br>
+            fleece →Vest<br>
+          </p>
+          <p>
+            スカートパンツは1番のポイントで、何枚ものボトムスから切り出した素材を集めてひらひらとし、いろんな青色を集めてみました。
+            ジャケットは柔道着を使い、白色から青色に染めています。
+            足元はソックスからシューズにかけてグラデーションになるようにしたところもこだわったポイントです。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
