--- a/htmls/blue3.html
+++ b/htmls/blue3.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/b/30.jpeg" 　alt=""   class="photo"/>
           <img src="../photos/b/31.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/32.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/33.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,14 @@
           <img src="../photos/b/38.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/39.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Denim one piece & Light blue polyester dress→tunic<br>
+            Light blue dress →blouse<br>
+            White Wide Pants →Sahuel pants<br>
+          </p>
+          <p>
+            No comment.
+          </p>
         </div>  
         
         <!-- <div class="rane2">
