--- a/htmls/blue4.html
+++ b/htmls/blue4.html
@@ -46,6 +46,14 @@
           <img src="../photos/b/48.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/49.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            G-jean →Tops <br>
+            tops of lace → Sleeves of tops<br>
+            Several pairs of denim pants & Denim shirt →Skirt<br>
+          </p>
+          <p>
+            No comment.
+          </p>
         </div>  
         
         <!-- <div class="rane2">
