--- a/htmls/blue5.html
+++ b/htmls/blue5.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/b/50.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/51.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/52.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/53.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,16 @@
           <img src="../photos/b/58.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/b/59.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            velours skirt →Tops <br>
+            quilted down coat→Skirt <br>
+            Hood of a hoodie →Skirt<br>
+          </p>
+          <p>
+            イギリス王室の公式カラーであるロイヤルブルーを基調とし、英国貴族の雰囲気漂う衣装の作成を心掛けました。
+            ベロア素材のトップスやアシンメトリーなスカートがポイントです。
+            また、衣装のシルエットで上品さを保ちつつ、身近に感じられるような様々な素材のものを用いています。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
