--- a/htmls/brawn.html
+++ b/htmls/brawn.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/br/10.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/13.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,14 @@
           <img src="../photos/br/18.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/19.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Thick knit×3、Blouse ×2→One Knit<br>
+            Lightweight knit×4→Snood / Pochette<br>
+          </p>
+          <p>
+            4種類のニット＋市販のレース＋色んなブラウスの切れ端を組み合わせて作ったスヌード。
+            巻き方によって見え方が違うことが推しポイント。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
