--- a/htmls/brawn2.html
+++ b/htmls/brawn2.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/br/20.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/21.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/22.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/23.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,17 @@
           <img src="../photos/br/28.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/br/29.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Duffle coat→Patterned open coat<br>
+            pleated skirt →Two-tiered pleated skirt<br>
+            Long sleeve knit→knit vest / glove<br>
+            Vest & Other scraps→Shoulder bag<br>
+          </p>
+          <p>
+            リメイクのポイントは、ベストで作ったショルダーバッグと、ボトムスです。
+            ボトムスはリメイク元のレディースのスカートをメンズでも履けるように2段にし、サイドは2本のベルトで調整できるようにしています。
+            アイシャドウやリップなどはブラウンでまとめ、頬にポイントとなるラインを描くことで、長髪の知的なメンズスタイルを演出しました。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
