--- a/htmls/green.html
+++ b/htmls/green.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/g/10.jpeg" 　alt=""   class="photo"/>
           <img src="../photos/g/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/13.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,13 @@
           <img src="../photos/g/18.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/19.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Jacket →Jacket <br>
+            Skirt →Pants<br>
+          </p>
+          <p>
+            テーマは孔雀です。ジャケットの袖をおおきくして翼を表現しました。また、あまり柄は入れず、シンプルにして優雅で高貴な鳥をイメージしています。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
