--- a/htmls/green2.html
+++ b/htmls/green2.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/g/20.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/21.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/22.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/23.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,14 @@
           <img src="../photos/g/28.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/29.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            One piece → Skirt <br>
+            High neck T-shirt →High neck T-shirt<br>
+          </p>
+          <p>
+            衣装のテーマは「優しくない緑」です。優しいシルエットのワンピースを足見せが挑戦的なスカートにしました。
+            メイクや足元の植物モチーフは、外から自然に癒しを求めるようでいて自然に包摂されている人間という概念を表しています。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
