--- a/htmls/purple2.html
+++ b/htmls/purple2.html
@@ -37,7 +37,7 @@
 
     <div id="all">    
         <div class="rane1">
-
+          <img src="../photos/p/20.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/21.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/22.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/23.jpeg" 　alt=""   class="photo"/> 
@@ -47,6 +47,16 @@
           <img src="../photos/p/27.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/28.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/29.jpeg" 　alt=""   class="photo"/> 
+
+          <p>
+            Sweetheart & Tulle pannier →襟巻き(この表現で合ってるかわからない)<br>
+            Skinny pants →Ruffle short pants <br>
+            White cloth→tube top(紫に染めて<br>
+            Skirt ×3 & Tulle pannier →Ruffled skirt<br>
+          </p>
+          <p>
+            No comment.
+          </p>
         </div>  
         
         <!-- <div class="rane2">
