--- a/htmls/purple3.html
+++ b/htmls/purple3.html
@@ -24,7 +24,8 @@
 </head>
 
 <header>
-        <a href="../htmls/1class.html">cap5.com
+     
+          <a href="../htmls/1class.html">cap5.com
     </a>
 </header>
    
@@ -36,25 +37,23 @@
 
     <div id="all">    
         <div class="rane1">
-          <img src="../photos/bl/30.jpeg" 　alt=""   class="photo"/>
-          <img src="../photos/bl/31.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/32.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/33.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/34.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/35.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/36.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/37.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/38.jpeg" 　alt=""   class="photo"/> 
-          <img src="../photos/bl/39.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/30.jpeg" 　alt=""   class="photo"/>
+          <img src="../photos/p/31.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/32.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/33.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/34.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/35.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/36.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/37.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/38.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/p/39.jpeg" 　alt=""   class="photo"/> 
 
           <p>
-            hooded sweatshirt & Solid color sweatshirt & Knit →Tops <br>
-            Jeans →Damaged jeans <br>
-            Necktie → Jeans pattern<br>
+            Jacket ×2 & Camisole & clothes made from jersey cloth & Hooded sweatshirt →Jacket <br>
+            Plain Pants →Patterned Pants<br>
           </p>
-            現代版の妖怪鵺をイメージして制作をしました。
-            チャックは体の傷や虎模様、足に巻き付くネクタイはしっぽの蛇に見立ててチラリと赤を見せることで荒々しさを表現しています。
-            妖怪のちょっと不気味、荒々しい、けどどこか魅了されるそんな雰囲気に仕上げました。
+          <p>
+            スプレーでレースの柄を転写したパンツ。実は裏表で柄が違うところがポイント。
           </p>
         </div>  
         
