--- a/htmls/red.html
+++ b/htmls/red.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/r/10.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/13.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,20 @@
           <img src="../photos/r/18.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/19.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Hooded sweatshirt →Poncho<br>
+            Skirt →Part of the poncho/Hem of pants<br>
+            Ribbed Knit →Part of the poncho / Bare muscle pants such as pants<br>
+            Fur vest →Food /Fur on sleeves,etc.<br>
+            Turtleneck →Inner <br>
+            Pants → Pants <br>
+            Skirt →Poncho/ Part of the pants<br>
+          </p>
+          <p>
+            テーマは狼の腹を裂いて生還した赤ずきんちゃんです。
+            そのため少女的なスカートは分解してトップスやパンツの裾に忍ばせました。
+            可愛らしい要素は残しつつ、傷つきながらも戦う女をイメージしています。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
