--- a/htmls/red2.html
+++ b/htmls/red2.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/r/20.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/21.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/22.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/23.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,16 @@
           <img src="../photos/r/28.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/29.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Bustier→Bustier<br>
+            Straight skirt →Skirt<br>
+            Fluffy coat→Fluffy jacket<br>
+          </p>
+          <p>
+            花のように美しく、凛としているけど、どこか儚げというコンセプトのもとに制作しました。
+            そのため、羽織のジャケットやスカート、カチューシャなど様々な所に沢山の花を散りばめています。
+            儚くも力強くも感じられる花のようだと感じていいただけたら嬉しいです。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
