--- a/htmls/red3.html
+++ b/htmls/red3.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/r/30.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/31.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/32.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/33.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,16 @@
           <img src="../photos/r/38.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/r/39.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Three tops → One tops<br>
+            Jacket → Short jacket<br>
+            Skirt / Pants →Balloon Pants<br>
+          </p>
+          <p>
+            ジャケットは大胆にカットし大ぶりのフリルやチュールをつけることでジェンダーレスな印象にしました。
+            またトップスは3つのトップスをそれぞれ分解しパッチワークのように繋ぎ合わせ、さらに袖の部分をだらんと長くしたのがポイントです。
+            どこか不思議で思わず興味を持ってしまう雰囲気を衣装で演出しました。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
