--- a/htmls/white2.html
+++ b/htmls/white2.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/w/20.jpeg" 　alt=""   class="photo"/>
           <img src="../photos/w/21.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/22.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/23.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,14 @@
           <img src="../photos/w/28.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/29.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            T-shirt →Poncho <br>
+            Pants →Pants <br>
+            windbreaker →Outer<br>
+          </p>
+          <p>
+            No comment.
+          </p>
         </div>  
         
         <!-- <div class="rane2">
