--- a/htmls/white4.html
+++ b/htmls/white4.html
@@ -46,6 +46,15 @@
           <img src="../photos/w/48.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/49.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Long denim → Short denim / Bustier <br>
+            Hooded sweatshirt → Short Length hoodie<br>
+          </p>
+          <p>
+            1本のロングデニムを、ショートデニムにし、切った生地でビスチェを作りました。
+            ショートジャケットの袖と、ビスチェの背中のリボンで統一感を出しています。
+            衣装やメイク、ヘアスタイルで、全体的にガールクラッシュな雰囲気を目指しました。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
