--- a/htmls/white5.html
+++ b/htmls/white5.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/w/50.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/51.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/52.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/53.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,15 @@
           <img src="../photos/w/58.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/59.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Blouse×2 & Lace & Ribbon→blouse<br>
+            Skirt & Ribbon→Skirt<br>
+          </p>
+          <p>
+            私の思ったかわいいをいっぱい詰め込みました。
+            ブラウスを２つ使うことで前から見ても後ろから見てもかわいくなるように工夫したり、レースやリボンをたくさん使ったところがポイントです。
+            横から見た腕のリボンやふわふわの生地の袖がイチオシになってます。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
