--- a/htmls/black.html
+++ b/htmls/black.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/bl/10.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/13.jpeg" 　alt=""   class="photo"/> 
@@ -45,8 +46,18 @@
           <img src="../photos/bl/17.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/18.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/bl/19.jpeg" 　alt=""   class="photo"/> 
-    
 
+          <p>
+            Jacket →Outer/ Pants<br>
+            Outer →Necktie <br>
+            Jersey→Pants <br>
+            Jumper→Pants<br>
+          </p>
+          <p>
+            全体として身体を拡張したようなシルエットにした。
+            パンツ正面の生地はスカートを思わせるデザインにしフェミニンというスパイスも効かせている。
+            背面のデザインも特徴的なので全身360度逃さずご覧下さい。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
