--- a/htmls/green3.html
+++ b/htmls/green3.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/g/30.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/31.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/32.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/33.jpeg" 　alt=""   class="photo"/> 
@@ -46,6 +47,16 @@
           <img src="../photos/g/38.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/g/39.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            Patch → Outer/Pants<br>
+            Military shirt→ Outer/Pants <br>
+            Military gas mask bag→ Pants pocket<br>
+          </p>
+          <p>
+            ミリタリーの古着で統一して、重さのある感じに仕上げた。荒野をサバイブする感じ笑。
+            アウターはトレンチっぽさを意識。
+            ラフシモンズ 2001-2002 AW の雰囲気を少し参考に。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
