--- a/htmls/purple.html
+++ b/htmls/purple.html
@@ -46,6 +46,14 @@
           <img src="../photos/p/18.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/19.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            shirt×3, denim×2, jacket → shirt dress<br>
+            jacket → vest<br>
+            denim → damaged denim<br>
+          </p>
+          <p>
+            イメージは「ワイルドでセクシーな貴族」です。ファーと金のリップでゴージャスさを演出しました。
+          </p>
         </div>  
         
         <!-- <div class="rane2">
