--- a/htmls/white.html
+++ b/htmls/white.html
@@ -36,7 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
-          <img src="../photos/w/01.jpeg" 　alt=""   class="photo"/> 
+          <img src="../photos/w/10.jpeg" 　alt=""   class="photo"/>
           <img src="../photos/w/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/13.jpeg" 　alt=""   class="photo"/> 
@@ -47,6 +47,12 @@
           <img src="../photos/w/18.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/19.jpeg" 　alt=""   class="photo"/> 
 
+          <p>
+            ここに衣装の説明
+          </p>
+          <p>
+            ここにコメント
+          </p>
         </div>  
         
         <!-- <div class="rane2">
