--- a/htmls/purple.html
+++ b/htmls/purple.html
@@ -36,6 +36,7 @@
 
     <div id="all">    
         <div class="rane1">
+          <img src="../photos/p/10.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/13.jpeg" 　alt=""   class="photo"/> 
