Corrected each title

--- a/htmls/green3.html
+++ b/htmls/green3.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <title>2つ目のHTML</title>
+    <title>green3</title>
   
 
     <meta name="X-UA-Compatible" content="IE=Edge">
