--- a/htmls/white.html
+++ b/htmls/white.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <title>2つ目のHTML</title>
+    <title>white1</title>
   
 
     <meta name="X-UA-Compatible" content="IE=Edge">
@@ -37,17 +37,6 @@
     <div id="all">    
         <div class="rane1">
           <img src="../photos/w/10.jpeg" 　alt=""   class="photo"/>
-          <p>
-            vintage wedding long dress →draped dress
-
-          </p>
-          <p>
-            ヴィンテージのウェディングドレス２着をリメイク。ドレープの効いたショートドレスに。
-            全体のバランスと布の広がり落ち感にこだわった。
-            もともと背中にあったくるみボタンを胸のラインに合うように配置、顔周りに大きなリボン
-            を持ってくることで華やかさを演出した。
-            メイクはウグイスを意識、可愛らしさと、力強さをもった鳥イメージした。
-          </p>
           <img src="../photos/w/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/13.jpeg" 　alt=""   class="photo"/> 
@@ -58,7 +47,12 @@
           <img src="../photos/w/18.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/w/19.jpeg" 　alt=""   class="photo"/> 
 
-    
+          <p>
+            ここに衣装の説明
+          </p>
+          <p>
+            ここにコメント
+          </p>
         </div>  
         
         <!-- <div class="rane2">
