--- a/htmls/purple.html
+++ b/htmls/purple.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
     <meta charset="utf-8" />
-    <title>2つ目のHTML</title>
+    <title>purple1</title>
   
 
     <meta name="X-UA-Compatible" content="IE=Edge">
@@ -36,7 +36,6 @@
 
     <div id="all">    
         <div class="rane1">
-          <img src="../photos/p/10.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/11.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/12.jpeg" 　alt=""   class="photo"/> 
           <img src="../photos/p/13.jpeg" 　alt=""   class="photo"/> 
