--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -109,9 +109,9 @@
       
 
           <a>
-            東京都新宿高校　入学<br>
-            東京都新宿高校　卒業<br>
-            首都大学東京（現：東京都立大）入学<br>
+            アイウエオ<br>
+            <br>
+            <br>
           </a>
         
         </div>  
