--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <img src="./photos/10.jpeg" 　alt=""   class="main"/> 
    
 
-    <div class="tate">
+    <!-- <div class="tate">
       <p>
         cap5 number 19 collection 
       </p>
-    </div>
+    </div> -->
 
  
     </div>
