--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
   <body>
-    <img src="./photos/11.jpeg" 　alt=""   class="logo"/> 
+    <img src="./photos/11.png" 　alt=""   class="logo"/> 
     <img src="./photos/10.jpeg" 　alt=""   class="main"/> 
    
 
