白衣装説明

--- a/htmls/white.html
+++ b/htmls/white.html
@@ -48,10 +48,14 @@
           <img src="../photos/w/19.jpeg" 　alt=""   class="photo"/> 
 
           <p>
-            ここに衣装の説明
+            vintage long wedding dress → draped short dress
           </p>
           <p>
-            ここにコメント
+            ヴィンテージのウェディングドレス２着をリメイク。ドレープの効いたショートドレスに。
+            全体のバランスと布の広がり落ち感にこだわった。
+            もともと背中にあったくるみボタンを胸のラインに合うように配置、顔周りに大きなリボン
+            を持ってくることで華やかさを演出した。
+            メイクはウグイスを意識、可愛らしさと、力強さをもった鳥イメージした。
           </p>
         </div>  
         
