色別ページ

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
          <ul class="">
            <li class="menu-item"><a href="./htmls/1class.html">work</a></li>
            <li class="menu-item"><a href="./htmls/2class.html">concept</a></li>
-           <li class="menu-item"><a href="./htmls/3class.html">cap5</a></li>
+           <li class="menu-item"><a href="./htmls/3class.html">about us</a></li>
            <li class="menu-item"><a href="./htmls/3class.html">cast </a></li>
            <li class="menu-item"><a href="./htmls/4class.html">sns </a></li>
          </ul>
@@ -91,7 +91,7 @@
         <li class="menu-item"><a href="./htmls/purple.html">purple</a></li>
         <li class="menu-item"><a href="./htmls/blue.html">blue</a></li>
         <li class="menu-item"><a href="./htmls/red.html">red</a></li>
-        <li class="menu-item"><a href="./htmls/black.html">black </a></li>
+        <li class="menu-item"><a href="./htmls/black0.html">black </a></li>
         <li class="menu-item"><a href="./htmls/green.html">green </a></li>
         <li class="menu-item"><a href="./htmls/white.html">white </a></li>
         <li class="menu-item"><a href="./htmls/brawn.html">brawn</a></li>
