--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p>画面の右半分左半分を押すことで文字を変更</p>
     </div> -->
     <a class="cap5">cap5.comテ</a>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top ml-auto">
+    <nav class="navbar navbar-expand-md navbar-light fixed-top ml-auto">
       
       <button class="navbar-toggler " data-toggle="collapse" data-target="#nav1">
          <span class ="navbar-toggler-icon"></span>
