--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -28,7 +28,7 @@
     </div> -->
    
       <div class="cap5">
-        <a href="../index.html"> cap5.com  </a>
+        <a href="../index.html"> Cap⁵.com </a>
       </div>
 
 
