--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -73,7 +73,7 @@
 
 
   <body>
-    <img src="../photos/11.jpeg" 　alt=""   class="logo"/> 
+    <!-- <img src="../photos/11.jpeg" 　alt=""   class="logo"/>  -->
     <!-- <img src="../photos/10.jpeg" 　alt=""   class="main"/>  -->
 
     <div class="tate">
