--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
   <body>
     <img src="./photos/11.png" 　alt=""   class="logo"/> 
-    <!-- <img src="./photos/10.jpeg" 　alt=""   class="main"/>  -->
+    <img src="./photos/10.jpeg" 　alt=""   class="main"/> 
    
 
     <!-- <div class="tate">
