--- a/htmls/white2.html
+++ b/htmls/white2.html
@@ -53,7 +53,7 @@
             windbreaker →Outer<br>
           </p>
           <p>
-            No comment.
+            70年代イギリスのパンクロックをテーマに制作しました。なので、中のTシャツにガーゼを縫い合わせてモスリンシャツを表現したり、上着にベルトをつけて拘束服をイメージしたような服にアレンジしました。
           </p>
         </div>  
         
