--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -95,7 +95,7 @@
         </a> -->
         <a href="../htmls/red.html">
           <img src="../photos/r/11.jpeg" 　alt=""   class="photo"/> 
-          <p>01→</p>
+          <p>detail→</p>
           <img src="../photos/r/10.jpeg" 　alt=""   class="photo0"/>
        </a>
        
