--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -64,8 +64,13 @@
 
   
     <div class="insta d-md-block">
-      <a href="https://www.instagram.com/kim_ra_ra_ra">
+      <a href="https://www.instagram.com/cap5.tmu/">
         <img class ="ad" src="../photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
+      </a>
+    </div>
+    <div class="insta d-md-block">
+      <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
+        <img class ="ad" src="../photos/youtube.png" alt="youtube"width="90%"height="90%"/>
       </a>
     </div>
 
@@ -95,7 +100,7 @@
         </a> -->
         <a href="../htmls/red.html">
           <img src="../photos/r/11.jpeg" 　alt=""   class="photo"/> 
-          <p>detail→</p>
+          <p>01→</p>
           <img src="../photos/r/10.jpeg" 　alt=""   class="photo0"/>
        </a>
        
