--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -44,9 +44,9 @@
         <ul class="">
           <li class="menu-item"><a href="../htmls/1class.html">back </a></li>
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
-          <li class="menu-item"><a href="../htmls/3class.html">about us</a></li>
+          <li class="menu-item"><a href="../htmls/4class.html">about us</a></li>
           <li class="menu-item"><a href="../htmls/3class.html">cast </a></li>
-          <li class="menu-item"><a href="../htmls/4class.html">sns </a></li>
+          <!-- <li class="menu-item"><a href="../htmls/4class.html">sns </a></li> -->
         </ul>
      </div>
     </nav>
