--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -57,7 +57,7 @@
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
           <li class="menu-item"><a href="../htmls/3class.html">about us</a></li>
           <li class="menu-item"><a href="../htmls/3class.html">cast </a></li>
-          <li class="menu-item"><a href="../htmls/4class.html">sns </a></li>
+          <!-- <li class="menu-item"><a href="../htmls/4class.html">sns </a></li> -->
         </ul>
      </div>
     </nav>
