--- a/htmls/black0.html
+++ b/htmls/black0.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="X-UA-Compatible" content="IE=Edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     
   
  <title>Cap5.com</title>
