--- a/htmls/black2.html
+++ b/htmls/black2.html
@@ -10,6 +10,7 @@
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1"> -->
     <link rel='stylesheet'  href='../css/purple.css' type='text/css'/>
     <!-- <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
 
     <!-- Latest compiled and minified CSS -->
