--- a/htmls/brawn.html
+++ b/htmls/brawn.html
@@ -8,6 +8,7 @@
 
     <meta name="X-UA-Compatible" content="IE=Edge">
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel='stylesheet'  href='../css/purple.css' type='text/css'/>
     <!-- <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/> -->
 
