--- a/htmls/red.html
+++ b/htmls/red.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>red1</title>
-  
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="X-UA-Compatible" content="IE=Edge">
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1"> -->
     <link rel='stylesheet'  href='../css/purple.css' type='text/css'/>
