--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -52,7 +52,7 @@
         <span class ="navbar-toggler-icon"></span>
      </button>
      <div class="collapse navbar-collapse " id="nav1">
-        <ul class="">
+        <ul class="items">
           <li class="menu-item"><a href="../index.html">back </a></li>
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
           <li class="menu-item"><a href="../htmls/3class.html">about us</a></li>
@@ -68,7 +68,7 @@
         <img class ="ad" src="../photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
       </a>
     </div>
-    <div class="insta d-md-block">
+    <div class="youtube d-md-block">
       <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
         <img class ="ad" src="../photos/youtube.png" alt="youtube"width="90%"height="90%"/>
       </a>
