--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -41,7 +41,7 @@
         <span class ="navbar-toggler-icon"></span>
      </button>
      <div class="collapse navbar-collapse " id="nav1">
-        <ul class="">
+        <ul class="items">
           <li class="menu-item"><a href="../htmls/1class.html">back </a></li>
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
           <li class="menu-item"><a href="../htmls/4class.html">about us</a></li>
@@ -55,6 +55,11 @@
     <div class="insta d-md-block">
       <a href="https://www.instagram.com/kim_ra_ra_ra">
         <img class ="ad" src="../photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
+      </a>
+    </div>
+    <div class="youtube d-md-block">
+      <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
+        <img class ="ad" src="../photos/youtube.png" alt="youtube"width="90%"height="90%"/>
       </a>
     </div>
 
