--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -42,7 +42,7 @@
         <span class ="navbar-toggler-icon"></span>
      </button>
      <div class="collapse navbar-collapse " id="nav1">
-        <ul class="">
+        <ul class="items">
           <li class="menu-item"><a href="../htmls/1class.html">back </a></li>
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
           <li class="menu-item"><a href="../htmls/3class.html">about us</a></li>
@@ -58,6 +58,12 @@
         <img class ="ad" src="../photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
       </a>
     </div>
+    <div class="youtube d-md-block">
+      <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
+        <img class ="ad" src="../photos/youtube.png" alt="youtube"width="90%"height="90%"/>
+      </a>
+    </div>
+
 
 </header>
    
