--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
          <img class ="ad" src="./photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
        </a>
      </div>
- 
+     <div class="youtube d-md-block">
+      <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
+        <img class ="ad" src="./photos/youtube.png" alt="youtube"width="70%"height="100%"/>
+      </a>
+    </div>
     
 
  </header>
