--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -53,7 +53,7 @@
      </button>
      <div class="collapse navbar-collapse " id="nav1">
         <ul class="items">
-          <li class="menu-item"><a href="../index.html">back </a></li>
+          <li class="menu-item"><a href="../index.html">top </a></li>
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
           <li class="menu-item"><a href="../htmls/3class.html">about us</a></li>
           <li class="menu-item"><a href="../htmls/3class.html">cast </a></li>
@@ -70,7 +70,7 @@
     </div>
     <div class="youtube d-md-block">
       <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
-        <img class ="ad" src="../photos/youtube.png" alt="youtube"width="90%"height="90%"/>
+        <img class ="ad" src="../photos/youtube.png" alt="youtube"width="70%"height="100%"/>
       </a>
     </div>
 
