--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -43,7 +43,7 @@
      </button>
      <div class="collapse navbar-collapse " id="nav1">
         <ul class="items">
-          <li class="menu-item"><a href="../htmls/1class.html">back </a></li>
+          <li class="menu-item"><a href="../htmls/1class.html">work</a></li>
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
           <li class="menu-item"><a href="../htmls/3class.html">about us</a></li>
           <li class="menu-item"><a href="../htmls/4class.html">cast </a></li>
