おっきくなった

--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -28,7 +28,7 @@
     </div> -->
    
       <div class="cap5">
-        <a href="../index.html"> Cap⁵.com </a>
+        <a href="../index.html"> Cap⁵ </a>
       </div>
       <!-- <a href="../index.html">cap5.com
       </a> -->
