--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     
   
- <title>Cap⁵.com</title>
+ <title>Cap⁵</title>
 
     <link rel='stylesheet'  href='../css/2style.css' type='text/css'/>
     <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/>
@@ -28,7 +28,7 @@
     </div> -->
    
       <div class="cap5">
-        <a href="../index.html"> Cap⁵.com </a>
+        <a href="../index.html"> Cap⁵</a>
       </div>
 
 
