--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/boolstrap.min.css"   
           integrity="sha384-oqVuAfXRKap7fdgcCY5uykM6+R9GqQ8K/uxy9rx7HNQlGYl1kPzQho1wx4JwY8wC"
           crossorigin="anonymous"> -->
- <title>Cap5.com</title>
+ <title>Cap⁵</title>
 
     <link rel='stylesheet'  href='./css/style.css' type='text/css'/>
     <link rel='stylesheet'  href='./css/bootstrap.min.css' type='text/css'/>
@@ -40,7 +40,7 @@
     <!-- <div id="dandan">
       <p>画面の右半分左半分を押すことで文字を変更</p>
     </div> -->
-    <a class="cap5">Cap⁵.com</a>
+    <a class="cap5">Cap⁵</a>
     <nav class="navbar navbar-expand-md navbar-light fixed-top ml-auto">
       
       <button class="navbar-toggler " data-toggle="collapse" data-target="#nav1">
