--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     
   
- <title>Cap⁵.com</title>
+ <title>Cap⁵</title>
 
     <link rel='stylesheet'  href='../css/1style.css' type='text/css'/>
     <link rel='stylesheet'  href='../css/bootstrap.min.css' type='text/css'/>
@@ -55,8 +55,8 @@
         <ul class="items">
           <li class="menu-item"><a href="../index.html">top </a></li>
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
-          <li class="menu-item"><a href="../htmls/3class.html">about us</a></li>
-          <li class="menu-item"><a href="../htmls/3class.html">cast </a></li>
+          <li class="menu-item"><a href="../htmls/4class.html">about us</a></li>
+          <li class="menu-item"><a href="../htmls/3class.html">cast</a></li>
           <!-- <li class="menu-item"><a href="../htmls/4class.html">sns </a></li> -->
         </ul>
      </div>
