--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -86,9 +86,12 @@
 
   <div class="skill">
 
-      <img src="../photos/10.jpeg" 　alt=""   class="photo"/> 
+      <!-- <img src="../photos/10.jpeg" 　alt=""   class="photo"/>  -->
+      <img src="../photos/13.png" 　alt=""   class="photo"/> 
 
   </div>
+
+ 
 
 
 
