--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -136,10 +136,10 @@
         <div class="rane4">
             <img src="../photos/blur/9.jpeg" 　alt=""   class="photo"/> 
             <img src="../photos/blur/10.jpeg" 　alt=""   class="photo"/> 
-            <img src="../photos/blur/12.jpeg" 　alt=""   class="photo"/> 
+            <!-- <img src="../photos/blur/12.jpeg" 　alt=""   class="photo"/>  -->
         </div>
     </div>  
-    
+    <img src="../photos/11.png" 　alt=""   class="photolast"/> 
     <div class="member">
        </a>
        <役職名簿一覧> 代表
@@ -166,7 +166,7 @@
             
         </a>
     </div>
-    <img src="../photos/blur/12.jpeg" 　alt=""   class="photolast"/> 
+    <img src="../photos/11.png" 　alt=""   class="photolast"/> 
 
   
 
