--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -70,11 +70,11 @@
 
   <div class="concept">
       <!-- <h1>re-make!</h2> -->
-      <h4>concept</h4>
+      <!-- <h4>concept</h4> -->
       <a>
           <!-- リメイク、それは。。。解体と再構築。 -->
-          不自由でも、未知でも、可能性を見いだし、魅せ続ける、<br>
-          今、ここで、生まれ変わる<br>
+          <!-- 不自由でも、未知でも、可能性を見いだし、魅せ続ける、<br> -->
+          <!-- 今、ここで、生まれ変わる<br> -->
 <br>
       </a>
       <!-- <h7>
@@ -84,12 +84,12 @@
 
   </div>
 
-  <div class="skill">
+  <!-- <div class="skill"> -->
 
       <!-- <img src="../photos/10.jpeg" 　alt=""   class="photo"/>  -->
       <img src="../photos/13.png" 　alt=""   class="photo"/> 
 
-  </div>
+  <!-- </div> -->
 
  
 
