--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -70,17 +70,17 @@
 
   <div class="concept">
       <!-- <h1>re-make!</h2> -->
-      <!-- <h4>concept</h4> -->
+      <h4>concept</h4>
       <a>
-          <!-- リメイク、それは。。。解体と再構築。 -->
-          <!-- 不自由でも、未知でも、可能性を見いだし、魅せ続ける、<br> -->
-          <!-- 今、ここで、生まれ変わる<br> -->
+          リメイク、それは。。。解体と再構築。 -->
+          不自由でも、未知でも、可能性を見いだし、魅せ続ける、<br>
+          今、ここで、生まれ変わる<br>
 <br>
       </a>
       <!-- <h7>
           この長いコロナの間,
           
-      </h7> -->
+      </h7>
 
   </div>
 
