最初に動画が流れるようにした

--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -29,7 +29,7 @@
 <header>
    
     <div class="cap5">
-        <a href="../index.html"> Cap⁵</a>
+        <a href="../top.html"> Cap⁵</a>
       </div>
 
 
