--- a/top.html
+++ b/top.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -19,9 +19,9 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/boolstrap.min.css"   
           integrity="sha384-oqVuAfXRKap7fdgcCY5uykM6+R9GqQ8K/uxy9rx7HNQlGYl1kPzQho1wx4JwY8wC"
           crossorigin="anonymous"> -->
-    <title>Cap⁵</title>
+ <title>Cap⁵</title>
 
-    <link rel='stylesheet'  href='./css/style.css' type='text/css'/>
+    <link rel='stylesheet'  href='./css/topstyle.css' type='text/css'/>
     <link rel='stylesheet'  href='./css/bootstrap.min.css' type='text/css'/>
 
 
@@ -32,9 +32,14 @@
 	<!-- Latest compiled JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-</head>
+  </head>
 
-<header>
+  <header>
+
+
+    <!-- <div id="dandan">
+      <p>画面の右半分左半分を押すことで文字を変更</p>
+    </div> -->
     <a class="cap5">Cap⁵</a>
     <nav class="navbar navbar-expand-md navbar-light fixed-top ml-auto">
       
@@ -47,12 +52,13 @@
            <li class="menu-item"><a href="./htmls/2class.html">concept</a></li>
            <li class="menu-item"><a href="./htmls/3class.html">about us</a></li>
            <li class="menu-item"><a href="./htmls/3class.html">cast </a></li>
+           <!-- <li class="menu-item"><a href="./htmls/4class.html">sns </a></li> -->
          </ul>
       </div>
      </nav>
  
      <div class="insta d-md-block">
-       <a href="https://www.instagram.com/cap5.tmu">
+       <a href="https://www.instagram.com/kim_ra_ra_ra">
          <img class ="ad" src="./photos/insta2.png" alt="インスタ"width="90%"height="90%"/>
        </a>
      </div>
@@ -63,14 +69,27 @@
     </div>
     
 
-</header>
-<body>
-<div>
-    <video playsinline muted autoplay onended="location.href='top.html'; " class="main">
-        <source src="op.mp4">
-    </video>
-</body>
-<footer>
+ </header>
+
+
+  <body>
+    <img src="./photos/11.png" 　alt=""   class="logo"/> 
+    <img src="./photos/10.jpeg" 　alt=""   class="main"/> 
+   
+
+    <!-- <div class="tate">
+      <p>
+        cap5 number 19 collection 
+      </p>
+    </div> -->
+
+ 
+    </div>
+    <!-- <a href="https://www.instagram.com/kim_ra_ra_ra">
+      <img src="../photos/1.jpeg" 　alt=""   class="photos"/>
+    </a> -->
+  </body>
+  <footer>
     <nav class="nav2">
       <ul class="menu-item2">
         <li class="menu-item"><a href="./htmls/purple.html">purple</a></li>
@@ -82,4 +101,5 @@
         <li class="menu-item"><a href="./htmls/brawn.html">brawn</a></li>
       </ul>
     </nav>
+  </footer>
 </div>
