--- a/htmls/2class.html
+++ b/htmls/2class.html
@@ -28,7 +28,7 @@
     </div> -->
    
       <div class="cap5">
-        <a href="../index.html"> Cap⁵</a>
+        <a href="../top.html"> Cap⁵</a>
       </div>
 
 
