--- a/htmls/blue4.html
+++ b/htmls/blue4.html
@@ -53,7 +53,9 @@
             Several pairs of denim pants & Denim shirt →Skirt<br>
           </p>
           <p>
-            No comment.
+            コンセプトの｢クラゲをモチーフにしたプリンセス｣に合わせ、スカートは水の中で動いているクラゲをイメージして歩くとなびくようにヒラヒラにしました。
+また、ジャケットの袖に着けたレースやチュールスカート、ティアラをイメージした髪飾りで、女の子らしく柔らかいプリンセスの要素を表現しました。
+さらに、モデルさんの明るくポップなキャラクターを生かすため、メイクで目の下から頬にかけてのキラキラを粒の大きいものにしたり、髪にカラフルなピンやクリップを使用し、プリンセスの柔らかい雰囲気におちゃめな雰囲気をプラスしました。
           </p>
         </div>  
         
