--- a/htmls/purple3.html
+++ b/htmls/purple3.html
@@ -54,7 +54,7 @@
             Plain Pants →Patterned Pants<br>
           </p>
           <p>
-            スプレーでレースの柄を転写したパンツ。実は裏表で柄が違うところがポイント。
+            ロングジャケットの袖は、色んなパーツをかき集めてドッキングしたようなイメージ。丈の長さがキッチリ揃った身頃の継ぎ接ぎはデザイナーの隠れ推しポイントです。また、レースをスプレーで転写したパンツは実は裏表でデザインが違うので注目です。
           </p>
         </div>  
         
