--- a/htmls/white3.html
+++ b/htmls/white3.html
@@ -57,7 +57,9 @@
             Previous Costume→high-necked<br>
           </p>
           <p>
-            No comment.
+            ふわふわ雲の上にいる女の子のイメージです。
+            カーディガンを編み上げてニットトップスに、ワンピースはスカートだけでなくスウェットも組み合わせることでいろんな角度から楽しめるようにしました。
+            回転した時の広がりが綺麗です
           </p>
         </div>  
         
