--- a/htmls/brawn.html
+++ b/htmls/brawn.html
@@ -53,8 +53,7 @@
             Lightweight knit×4→Snood / Pochette<br>
           </p>
           <p>
-            4種類のニット＋市販のレース＋色んなブラウスの切れ端を組み合わせて作ったスヌード。
-            巻き方によって見え方が違うことが推しポイント。
+            7つのニットを分解し、ワンピース、つけ襟、スヌード、ポシェットという4つのアイテムにギュッと詰め込みました。様々なレースを使ったスヌードは巻き方によって見える顔が違うこともポイント。冬の寒さを楽しんでいる女の子です
           </p>
         </div>  
         
