--- a/top.html
+++ b/top.html
@@ -74,7 +74,15 @@
 
   <body>
     <img src="./photos/11.png" 　alt=""   class="logo"/> 
-    <img src="./photos/10.jpeg" 　alt=""   class="main"/> 
+
+
+
+      <img src="./photos/10.jpeg" 　alt=""   class="main"/> 
+
+
+    <div class="long d-md-none">
+     <img class ="" src="./photos/long.png" alt=""width="100%"height=""/>
+    </div>
    
 
     <!-- <div class="tate">
@@ -89,7 +97,7 @@
       <img src="../photos/1.jpeg" 　alt=""   class="photos"/>
     </a> -->
   </body>
-  <footer>
+  <!-- <footer>
     <nav class="nav2">
       <ul class="menu-item2">
         <li class="menu-item"><a href="./htmls/purple.html">purple</a></li>
@@ -101,5 +109,5 @@
         <li class="menu-item"><a href="./htmls/brawn.html">brawn</a></li>
       </ul>
     </nav>
-  </footer>
+  </footer> -->
 </div>
