--- a/top.html
+++ b/top.html
@@ -74,14 +74,11 @@
 
   <body>
     <img src="./photos/11.png" 　alt=""   class="logo"/> 
-
-
-
-      <img src="./photos/10.jpeg" 　alt=""   class="main"/> 
+   <img src="./photos/10.jpeg" 　alt=""   class="main"/> 
 
 
     <div class="long d-md-none">
-     <img class ="" src="./photos/long.png" alt=""width="100%"height=""/>
+     <img class ="" src="./photos/long.jpeg" alt=""width="100%"height=""/>
     </div>
    
 
