--- a/htmls/purple2.html
+++ b/htmls/purple2.html
@@ -26,7 +26,7 @@
 
 <header>
      
-          <a href="../htmls/1class.html">cap5.com
+          <a href="../htmls/1class.html">Back
     </a>
 </header>
    
