--- a/htmls/white3.html
+++ b/htmls/white3.html
@@ -25,7 +25,7 @@
 </head>
 
 <header>
-        <a href="../htmls/1class.html">cap5.com
+        <a href="../htmls/1class.html">Back
     </a>
 </header>
    
