--- a/htmls/ヘッダー雛形.html
+++ b/htmls/ヘッダー雛形.html
@@ -28,7 +28,7 @@
 
      
     <div class="cap5">
-        <a href="../index.html"> cap5.com  </a>
+        <a href="../index.html"> Back  </a>
       </div>
       <!-- <a href="../index.html">cap5.com
       </a> -->
