--- a/htmls/4class.html
+++ b/htmls/4class.html
@@ -93,14 +93,15 @@
       <br>
    </div>
    <div class="text2">
+    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
+      youtube＞＞＞＞＞＞＞＞＞＞＞＞＞<br>
+    </a>
+    <br> <br> <br> <br>
+    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
+      instagram＞＞＞＞＞＞＞＞＞＞＞＞<br>
+    </a>
 
-      <a href="../htmls/1class.html">
-        youtube＞＞＞＞＞＞＞＞＞＞＞＞＞<br>
-      </a>
-
-      <a href="../htmls/1class.html">
-        instagram＞＞＞＞＞＞＞＞＞＞＞＞<br>
-      </a>
+   
     </div>
          
 
