--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -98,14 +98,13 @@
       <br>
    </div>
    <div class="text2">
-
-      <a href="../htmls/1class.html">
-        youtube＞＞＞＞＞＞＞＞＞＞＞＞＞<br>
-      </a>
-
-      <a href="../htmls/1class.html">
-        instagram＞＞＞＞＞＞＞＞＞＞＞＞<br>
-      </a>
+    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
+      youtube＞＞＞＞＞＞＞＞＞＞＞＞＞<br>
+    </a>
+    <br> <br> <br>
+    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
+      instagram＞＞＞＞＞＞＞＞＞＞＞＞<br>
+    </a>
     </div>
          
     <div class="text1">
