--- a/htmls/1class.html
+++ b/htmls/1class.html
@@ -28,7 +28,7 @@
     </div> -->
    
       <div class="cap5">
-        <a href="../top.html"> Cap⁵ </a>
+        <a href="../top.html"> Cap⁵</a>
       </div>
       <!-- <a href="../index.html">cap5.com
       </a> -->
@@ -53,7 +53,7 @@
      </button>
      <div class="collapse navbar-collapse " id="nav1">
         <ul class="items">
-          <li class="menu-item"><a href="../index.html">top </a></li>
+          <li class="menu-item"><a href="../index.html">top</a></li>
           <li class="menu-item"><a href="../htmls/2class.html">concept</a></li>
           <li class="menu-item"><a href="../htmls/4class.html">about us</a></li>
           <li class="menu-item"><a href="../htmls/3class.html">cast</a></li>
@@ -83,7 +83,7 @@
 
     <div class="tate">
       <p>
-        cap5 
+        Cap⁵2020.spring.show
         <!-- number 19 collection  -->
       </p>
     </div>
