--- a/htmls/3class.html
+++ b/htmls/3class.html
@@ -88,12 +88,12 @@
     <div class="text1">
       <h2>About us</h2>
       <a>
-        Cap5は、毎年11月に行われる東京都立大学「みやこ祭」と4月に行われる新歓期間内で行われる
+        Cap⁵は、毎年11月に行われる東京都立大学「みやこ祭」と4月に行われる新歓期間内で行われる
         ファッションショーの企画運営・制作を行っている団体です。 「ドキドキわくわくの共有」をコンセプトに、企画を作っているスタッフ、モデルはもちろんの事、当日私達のショーを見ていただいた
         お客さんとも、同じ感動や気持ちを共有して、会場全体が一つになる瞬間を作りたい、という思いで活動してまいりました。
         本ショーは昨年度の春に開催予定だったものを延期し、オンラインでの公開を決定したものです。 これまで二度の緊急事態宣言やサークル活動の自粛など、目に見えないウィルスにより先の読めない状況の中、
         オンライン開催という新しい取り組みに苦労を重ねながらも、全員が一丸となって、準備に励んでまいりました。 オンライン開催に当たって、スタジオでの撮影や、ショーの動画作り、サイト作りなど、今までになかった試みに取り組む日々は、 私たちにとってとても刺激的で、ワクワクするものでした!
-        皆様にも、このオンラインショー「REMAKE」を通して、Cap5のドキドキとワクワクを共有できたら幸いです! これからも、高みを目指し、進化を遂げていく Cap5にご期待ください!
+        皆様にも、このオンラインショー「REMAKE」を通して、Cap⁵のドキドキとワクワクを共有できたら幸いです! これからも、高みを目指し、進化を遂げていく Cap⁵にご期待ください!
       </a>
       <br>
    </div>
@@ -102,7 +102,7 @@
       youtube＞＞＞＞＞＞＞＞＞＞＞＞＞<br>
     </a>
     <br> <br> <br>
-    <a href="https://youtube.com/channel/UCDwoYHcRh_GmVbUpMxWP1Ng">
+    <a href="https://www.instagram.com/kim_ra_ra_ra">
       instagram＞＞＞＞＞＞＞＞＞＞＞＞<br>
     </a>
     </div>
@@ -130,21 +130,7 @@
        <b>モデル</b>
        野澤桃華 Momoka Nozawa 千葉廉一 Chiba Renichi
        菊地 菜穂 Naho Kikuchi
-       前田 虎太郎 Kotaro Maeda 森下 千鶴 Chizuru Morisita 吉峯 知歩 ChihoYoshimine 猪野潤 Zyun Ino 小野桜子 Sakurako Ono 西條実姫 Saizyou Miki 中山恵美子 Emiko Nakayama 諸岡陸 Riku Morooka 佐藤由紀菜 Yukina Sato 立川雄斗 Yuuto Tachikawa 島海翔 Kaito Shima 中村大生 Nakamura Daiki 早川恭平 Kyouhei Hayakawa 藤井珠生 Tamaki Fujii 藤原弘太郎 Koutarou Fujiwara 南大輔 Daisuke Minami 横田有咲 Yokota Arisa 横澤裕斗 Yuto Yokozawa 阿部祐己 Yuuki Abe 南里美波 Minami Nanri 大坪楓 Kaede Otsubo
-       <b>デザイナー</b>
-       西森千珠 Chizu Nishimori 熊谷たみの Tamino Kumagai 田中涼菜 Suzuna Tanaka 小林瞭子 Ryoko Kobayasi 田中千陽 Chiaki Tanaka 出井靖伸 Yasunobu Idei 高橋優海 Yuka Takahashi 織田 恵利佳 Erika Oda 川守明日香 Asuka Kawamori 上林永宜 Nagi Kannbayashi
-       佐藤由紀菜 Yukina Sato 添田英紀 Eiki Soeta 東條はづき Hazuki Tokyou 野澤桃華 Momoka Nozawa 峰村明瑠 Akeru Minemura 山上茉姫 Mahime Yamagami 山本 亜美 Ami Yamamoto 大坪楓 Kaede Otsubo 田巻圭登 Keito Tamaki 津田真梨乃 Marino Tsuda 浜田菜結 Nayu Hamada ホーケン舞理衣 Marie Hawken 本多こころ Kokoro Honda
-       <b>演出</b>
-       古田ゆい Yui Furuta 東條はづき Hazuki Tokyou 秋田 凉美 Suzumi Akita 太田このみ Konomi Ota 上林永宜 Nagi Kannbayashi 山本愛梨 Airi Yamamoto 鳥生菜々子 Nanako Toriu 南任瑠璃 Ruri Nanto 佐藤由紀菜 Yukina Sato
-       <b>プレス</b>
-       神字里奈 Rina Kanji 西森千珠 Chizu Nisimori 野澤桃華 Momoka Nozawa 峰村明瑠 Akeru Minemura
-       <b>メディア</b>
-       菊谷杏里 Asato Kikuya 大悟法 優奈 Yuna Daigohou 佐藤由紀菜 Yukina Sato 山上茉姫 Mahime Yamagami 森澤裕太 Yuta Morisawa 柑子木凛奈 Rinna Koujiki
-       <b>メイク</b>
-       山本愛梨 Airi Yamamoto ロウシティ Lou Shiting 熊谷たみの Tamino Kumagai 酒井 香凜 Karin Sakai 神字里奈 Rina Kanji
-       久保田 七海 Nanami Kuboki 柑子木凛奈 Rinna Koujiki 茂木朱里 Akari Motegi
-       <b>カメラ</b>
-       峰村明瑠 Akeru Minemura 小林瞭子 Ryoko Kobayasi 船木梨里花 Ririka Funaki 三浦光梨 Hikari Miura
+    
 
             
         </a>
